third pages done timing

--- a/history.html
+++ b/history.html
@@ -76,11 +76,11 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mb-0 ms-auto">
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="timing.html">दर्शन समय</a>
+									<a class="nav-link" aria-current="page" href="timing.html">दर्शन समय</a>
 								</li>
 
 								<li class="nav-item">
-									<a class="nav-link" href="history.html">इतिहास </a>
+									<a class="nav-link active" href="history.html">इतिहास </a>
 								</li>
 
 								<li class="nav-item dropdown">
@@ -417,182 +417,225 @@
 		</div>
 	</section>
 
+<div class="container pt-5">
 
+  <!-- Top Section -->
+  <div class="text-center">
+    <h2 class="fw-bold">श्याम भक्ति की शुरुआत</h2>
+    <div class="section-line-his"></div>
 
-	<div class="container py-5 text-center">
-
-    <!-- Heading -->
-    <h2 class="fw-bold">आरती का समय और विधि</h2>
-    <div class="title-line"></div>
-
-    <p class="text-warning fw-semibold mt-3">
-        भक्ति से भरी आरतियाँ — श्याम बाबा के चरणों का नित्य साकार अनुभव।
+    <p class="mx-auto" style="max-width: 900px;">
+      श्याम मंदिर सूरत की स्थापना श्याम भक्तों से प्रेरित होकर की गई है।
+      जिसमें उन्हें बर्बरीक (श्याम बाबा) के दर्शन हुए।
+      यह रूप मंदिर निर्माण की नींव बना और धीरे-धीरे भव्य मंदिर के रूप में विकसित हुआ।
+      इस मंदिर का उद्देश्य था — खाटू श्याम जी की भक्ति को गुजरात में फैलाना।
     </p>
+  </div>
 
-    <p class="text-muted mb-5">
-        श्री श्याम मंदिर में प्रतिदिन होने वाली आरतियाँ भक्तों के लिए आध्यात्मिक अनुशासन और भक्ति का मुख्य केंद्र हैं।
-        नीचे पट खुलने, मंगल होने एवं आरतियों का समय दिया गया है।
-    </p>
-
-    <!-- Aarti Card -->
-    <div class="aarti-box">
-        <div class="row g-4 align-items-start">
-
-            <!-- Morning -->
-            <div class="col-md-6">
-                <i class="bi bi-sun fs-2 mb-2 d-block"></i>
-                <span class="time-badge">पट खुलने का समय</span>
-
-                <h5 class="fw-bold">प्रातः 05:00</h5>
-
-                <div class="aarti-list mt-3">
-                    <p>मंगला आरती : 05:15</p>
-                    <p>श्रृंगार आरती : 07:30</p>
-                    <p>भोग : 12:01</p>
-                    <p>भोग आरती : 12:15</p>
-                    <p>विश्राम (दोपहर) : 12:30</p>
-                </div>
-            </div>
-
-            <!-- Evening -->
-            <div class="col-md-6">
-                <i class="bi bi-moon-stars fs-2 mb-2 d-block"></i>
-                <span class="time-badge">पट खुलने का समय</span>
-
-                <h5 class="fw-bold">सांय: 05:00</h5>
-
-                <div class="aarti-list mt-3">
-                    <p>संध्या आरती : 07:00</p>
-                    <p>भोग : 08:00</p>
-                    <p>शयन आरती : 09:45</p>
-                    <p>पट मंगल (रात्रि) : 10:15</p>
-                </div>
-            </div>
-
-        </div>
-
-        <!-- Note -->
-        <p class="note mt-4">
-            आवश्यकतानुसार श्रृंगार आरती में 15 से 30 मिनट का समय अधिक लग सकता है। <br>
-            <strong>नोट :</strong> एकादशी को मंदिर के पट मंगल आरती से रात्रि 10:30 बजे तक खुले रहेंगे।
-        </p>
-    </div>
+  <!-- Image -->
+  <div class="d-flex justify-content-center my-5">
+    <img src="img/1photo.jpg" class="img-fluid temple-img-his" alt="Temple Image">
+  </div>
 
 </div>
 
+<!-- Divider -->
+<div class="divider-his"></div>
 
-<section class="donation-section">
-    <div class="container-fluid">
-        <div class="row align-items-center">
+<!-- Bottom Section -->
+<div class="container  text-center">
+  <h2 class="fw-bold">2009-2017: निर्माण की यात्रा</h2>
+  <div class="section-line-his"></div>
 
-            <!-- Left Content -->
-            <div class="col-lg-7 donation-content">
-                <h2 class="text-white">विशेष अवसरों पर दर्शन</h2>
+  <p class="mx-auto" style="max-width: 900px;">
+    श्री श्याम मंदिर सूरत की निर्माण यात्रा एक प्रेरणादायक गाथा है।
+    इसकी शुरुआत एक साधारण सी जगह से हुई थी जहाँ कुछ भक्त मिलकर कीर्तन और पूजा करते थे।
+    प्रारंभिक दिनों में मंदिर की कोई स्थायी संरचना नहीं थी।
+  </p>
+</div>
 
-                <p class="fw-semibold">
-त्योहारों एवं विशेष आयोजनों पर दर्शन समय                </p>
-
-                <p class="text-white">
-                    इन अवसरों पर विस्तारित दर्शन होते हैं, कृपया समयपूर्व जानकारी के लिए संपर्क करें या नोटिस बोर्ड देखें।
-                </p>
-
-                <!-- Payment Icons -->
-                <!-- <div class="payment-icons d-flex gap-3 flex-wrap my-4">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Maestro_logo.png">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Paytm_Logo_%28standalone%29.svg">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg">
-                </div>
-
-                <button class="donate-btn">भक्ति पूर्वक दान करें</button> -->
-            </div>
-
-            <!-- Right Image -->
-            <div class="col-lg-5 p-0">
-                <div class="donation-image"><img src="img/1photo.jpg" alt="" height="320" width="600"></div>
-            </div>
-
-        </div>
+<div class="container carousel-wrapper-his mt-5">
+  <div class="carousel-container">
+    <button class="carousel-btn prev-btn">&#10094;</button>
+    <div class="carousel-track">
+      <div class="card1">
+         <img src="img/1photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2021</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/2photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2022</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/3photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2023</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/1photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2024</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/2photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2025</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
     </div>
-</section>
-
-
-
-
-
-		<section id="watch" class="p_4 pt-0" style="background-color: #FAF7ED; padding-bottom: 10rem;">
-		<div class="container-xl" >
-			<div class="donate_1 row text-center mb-5">
-				<!-- <div class="col-md-12">
-					<h5 class="col_oran fs-6 mt-3">+ WATCH VIDEO +</h5>
-					<h1 class="mb-0 font_50 mt-3">Our Live Broadcast</h1>
-				</div> -->
-			</div>
-			<div class="watch_1 row">
-				<div class="col-md-8 ps-0">
-  <div class="watch_1r d-flex flex-column justify-content-center h-100" style="background-color: #FAF7ED;">
-
-    <!-- Main Heading -->
-    <h1 class="fw-bold mb-2">
-      दर्शन हेतु दिशा-निर्देश
-    </h1>
-
-    <!-- Orange underline -->
-    <span style="width:60px;height:3px;background:#ff7a00;display:inline-block;margin-bottom:20px;"></span>
-
-    <!-- Sub Heading -->
-    <h5 class="fw-bold mb-4" style="color:#ff7a00;">
-      दर्शन नियम और निर्देश
-    </h5>
-
-    <!-- Bullet Points -->
-    <ul class="list-unstyled">
-      <li class="d-flex mb-3">
-        <span class="me-2" style="color:#ff7a00;">🔥</span>
-        <span>दर्शन के समय मंदिर में मोबाइल का प्रयोग न करें।</span>
-      </li>
-
-      <li class="d-flex mb-3">
-        <span class="me-2" style="color:#ff7a00;">🔥</span>
-        <span>साफ़ाई और अनुशासन बनाए रखें।</span>
-      </li>
-
-      <li class="d-flex mb-3">
-        <span class="me-2" style="color:#ff7a00;">🔥</span>
-        <span>बुजुर्गों एवं दिव्यांगों को प्राथमिकता दें।</span>
-      </li>
-
-      <li class="d-flex">
-        <span class="me-2" style="color:#ff7a00;">🔥</span>
-        <span>विशेष दर्शन के लिए प्रबंधन से पूर्व अनुमति आवश्यक है।</span>
-      </li>
-    </ul>
-
+    <button class="carousel-btn next-btn">&#10095;</button>
   </div>
 </div>
 
-				<div class="col-md-4 pe-0">
-					<div class="watch_1l position-relative">
-						<div class="watch_1l1">
-							<div class="grid clearfix">
-								<figure class="effect-jazz mb-0">
-									<a href="#"><img src="img/8photo.png" class="w-100 " style="height: 45vh;" alt="img25"></a>
-								</figure>
-							</div>
-						</div>
-						<!-- <div class="watch_1l2 position-absolute text-center top-0 w-100  bg_back">
-							<span><a class="d-inline-block bg_oran text-white text-center hvr-grow" href="#"><i
-										class="fa fa-play"></i></a></span>
-						</div> -->
-					</div>
-				</div>
-			
-			</div>
-		
-		</div>
-	</section>
+<!-- Divider -->
+<div class="divider-his"></div>
+
+<!-- Bottom Section -->
+<div class="container  text-center">
+  <h2 class="fw-bold">2009-2017: निर्माण की यात्रा</h2>
+  <div class="section-line-his"></div>
+
+  <p class="mx-auto" style="max-width: 900px;">
+    श्री श्याम मंदिर सूरत की निर्माण यात्रा एक प्रेरणादायक गाथा है।
+    इसकी शुरुआत एक साधारण सी जगह से हुई थी जहाँ कुछ भक्त मिलकर कीर्तन और पूजा करते थे।
+    प्रारंभिक दिनों में मंदिर की कोई स्थायी संरचना नहीं थी।
+  </p>
+</div>
+
+<div class="container carousel-wrapper-his mt-5">
+  <div class="carousel-container">
+    <button class="carousel-btn prev-btn">&#10094;</button>
+    <div class="carousel-track">
+      <div class="card1">
+         <img src="img/1photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2021</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/3photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2022</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/2photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2023</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/1photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2024</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card1">
+         <img src="img/2photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2025</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+    </div>
+    <button class="carousel-btn next-btn">&#10095;</button>
+  </div>
+</div>
+
+<script>
+document.querySelectorAll('.carousel-wrapper-his').forEach(wrapper => {
+
+  const track = wrapper.querySelector('.carousel-track');
+  let cards = Array.from(track.children);
+  const prevBtn = wrapper.querySelector('.prev-btn');
+  const nextBtn = wrapper.querySelector('.next-btn');
+
+  let visibleCards = window.innerWidth <= 768 ? 1 : 3;
+  let index = visibleCards;
+
+  // clone last
+  for (let i = cards.length - visibleCards; i < cards.length; i++) {
+    track.insertBefore(cards[i].cloneNode(true), track.firstChild);
+  }
+
+  // clone first
+  for (let i = 0; i < visibleCards; i++) {
+    track.appendChild(cards[i].cloneNode(true));
+  }
+
+  cards = Array.from(track.children);
+
+  function getCardWidth() {
+    return cards[0].offsetWidth + 20;
+  }
+
+  function updateCarousel() {
+    track.style.transform = `translateX(${-index * getCardWidth()}px)`;
+  }
+
+  updateCarousel();
+
+  function moveRight() {
+    index++;
+    track.style.transition = 'transform 0.5s ease';
+    updateCarousel();
+  }
+
+  function moveLeft() {
+    index--;
+    track.style.transition = 'transform 0.5s ease';
+    updateCarousel();
+  }
+
+  nextBtn.addEventListener('click', moveRight);
+  prevBtn.addEventListener('click', moveLeft);
+
+  let auto = setInterval(moveRight, 3000);
+
+  function resetAuto() {
+    clearInterval(auto);
+    auto = setInterval(moveRight, 3000);
+  }
+
+  nextBtn.addEventListener('click', resetAuto);
+  prevBtn.addEventListener('click', resetAuto);
+
+  track.addEventListener('transitionend', () => {
+    if (index >= cards.length - visibleCards) {
+      index = visibleCards;
+      track.style.transition = 'none';
+      updateCarousel();
+    }
+    if (index < visibleCards) {
+      index = cards.length - visibleCards * 2;
+      track.style.transition = 'none';
+      updateCarousel();
+    }
+  });
+
+});
+</script>
+
+<section style="padding-bottom: 10rem;"></section>
+
+
+
+
 <div class="footer_m position-relative">
 		<div class="footer_m1">
 			<section id="footer" class="p_4 bg_blue">
