--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								</li>
 
 								<li class="nav-item">
-									<a class="nav-link" href="about.html">इतिहास </a>
+									<a class="nav-link" href="history.html">इतिहास </a>
 								</li>
 
 								<li class="nav-item dropdown">
@@ -687,93 +687,6 @@ window.addEventListener('resize', () => {
 		</div>
 	</section>
 
-<div class="container py-5">
-
-    <!-- Heading -->
-    <h2 class="section-title">गैलरी – भक्ति और स्मृतियों की झलक</h2>
-    <div class="underline"></div>
-
-    <!-- Tabs -->
-    <ul class="nav nav-pills justify-content-center mb-4">
-        <li class="nav-item">
-            <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#tab1">पाटोत्सव</button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" data-bs-toggle="pill" data-bs-target="#tab2">विशाल रक्तदान शिविर</button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" data-bs-toggle="pill" data-bs-target="#tab3">श्री राम कथा</button>
-        </li>
-        <li class="nav-item">
-            <button class="nav-link" data-bs-toggle="pill" data-bs-target="#tab4">कावड़ यात्रा</button>
-        </li>
-    </ul>
-
-    <!-- Tab Content -->
-    <div class="tab-content">
-
-        <!-- TAB 1 -->
-        <div class="tab-pane fade show active" id="tab1">
-            <div id="carouselTab1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-                <div class="carousel-inner">
-
-                    <!-- Slide 1 -->
-                    <div class="carousel-item active">
-                        <div class="row g-3">
-                            <div class="col-md-4"><img src="img/1photo.jpg" class="gallery-img"></div>
-                            <div class="col-md-4"><img src="img/2photo.jpg" class="gallery-img"></div>
-                            <div class="col-md-4"><img src="img/3photo.jpg" class="gallery-img"></div>
-                        </div>
-                    </div>
-
-                    <!-- Slide 2 -->
-                    <div class="carousel-item">
-                        <div class="row g-3">
-                            <div class="col-md-4"><img src="img/2photo.jpg" class="gallery-img"></div>
-                            <div class="col-md-4"><img src="img/3photo.jpg" class="gallery-img"></div>
-                            <div class="col-md-4"><img src="img/4photo.jpg" class="gallery-img"></div>
-                        </div>
-                    </div>
-
-                    <!-- Slide 3 -->
-                    <div class="carousel-item">
-                        <div class="row g-3">
-                            <div class="col-md-4"><img src="img/3photo.jpg" class="gallery-img"></div>
-                            <div class="col-md-4"><img src="img/4photo.jpg" class="gallery-img"></div>
-                            <div class="col-md-4"><img src="img/5photo.jpg" class="gallery-img"></div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <!-- Controls -->
-                <button class="carousel-control-prev" data-bs-target="#carouselTab1" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </button>
-                <button class="carousel-control-next" data-bs-target="#carouselTab1" data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </button>
-
-            </div>
-        </div>
-
-        <!-- TAB 2 -->
-        <div class="tab-pane fade" id="tab2">
-            <div class="text-center py-5">यहाँ रक्तदान शिविर की गैलरी आएगी</div>
-        </div>
-
-        <!-- TAB 3 -->
-        <div class="tab-pane fade" id="tab3">
-            <div class="text-center py-5">यहाँ श्री राम कथा की गैलरी आएगी</div>
-        </div>
-
-        <!-- TAB 4 -->
-        <div class="tab-pane fade" id="tab4">
-            <div class="text-center py-5">यहाँ कावड़ यात्रा की गैलरी आएगी</div>
-        </div>
-
-    </div>
-</div>
 
 <div class="container py-5">
     <div class="text-center mb-4">
