team pages added

--- a/history.html
+++ b/history.html
@@ -311,9 +311,9 @@
 				<div class="col-md-8 ps-0 d-flex" >
 					<div class=" d-flex justify-content-center flex-column" style="background-color: #FAF7ED">
 						<h5 class="col_oran">
-							दर्शन समय</h5>
-						<h1 class="mt-3 mb-3">श्री श्याम जी के पावन दर्शन का शुभ समय</h1>
-						<p class="mb-0">श्री श्याम मंदिर, सूरत में दर्शन के लिए निर्धारित समयों की जानकारी प्राप्त करें और अपने दर्शन को सुगम और श्रद्धापूर्ण बनाएं।</p>
+							इतिहास</h5>
+						<h1 class="mt-3 mb-3">श्री श्याम मंदिर सूरत का गौरवशाली इतिहास</h1>
+						<p class="mb-0">समर्पण, भक्ति और सेवा के प्रतीक इस मंदिर ने वर्षों से श्रद्धालुओं को आध्यात्मिक ऊर्जा और सांस्कृतिक एकता का संदेश दिया है।</p>
 					</div>
 				</div>
 					<div class="col-md-4 pe-0 pt-2">
