--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
 								<li class="nav-item">
 									<a class="nav-link" href="history.html">इतिहास </a>
 								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="team.html">पदाधिकारी / कार्यकारणी </a>
+								</li>
 
-								<li class="nav-item dropdown">
+								<!-- <li class="nav-item dropdown">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 										data-bs-toggle="dropdown" aria-expanded="false">
 										पदाधिकारी / कार्यकारणी
@@ -106,7 +109,7 @@
 										<li><a class="dropdown-item border-0" href="event_detail.html"> पदाधिकारी / कार्यकारणी</a>
 										</li>
 									</ul>
-								</li>
+								</li> -->
 
 								<li class="nav-item dropdown">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
