update images pages

--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
 										</svg>
 									</a>
 									<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
-										<li><a class="dropdown-item" href="donation.html"> आयोजन</a></li>
-										<li><a class="dropdown-item border-0" href="donation_detail.html"> Donation
-												Detail</a></li>
+										<li><a class="dropdown-item" href="everyday.html"> प्रतिदिन भोग दर्शन</a></li>
+										<li><a class="dropdown-item border-0" href="donation_detail.html">विशेष अवसर</a></li>
 									</ul>
 								</li>
 
