add special pages

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									</a>
 									<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
 										<li><a class="dropdown-item" href="everyday.html"> प्रतिदिन भोग दर्शन</a></li>
-										<li><a class="dropdown-item border-0" href="donation_detail.html">विशेष अवसर</a></li>
+										<li><a class="dropdown-item border-0" href="special.html">विशेष अवसर</a></li>
 									</ul>
 								</li>
 
