--- a/special.html
+++ b/special.html
@@ -17,6 +17,10 @@
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" href="css/custome.css">
 
+
+
+  <link href="assets/css/main.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -489,6 +493,105 @@
 		</div>
 	</section>
 
+<style>
+.gallery-img-his{
+  cursor:pointer;
+  transition: transform .3s;
+}
+.gallery-img-his:hover{
+  transform: scale(1.05);
+}
+</style>
+
+<div class="container my-5">
+  <div class="row g-3">
+
+    <div class="col-lg-3 col-md-4 col-6">
+      <img src="img/1photo.jpg" class="img-fluid gallery-img-his"
+           data-bs-toggle="modal" data-bs-target="#galleryModal"
+           data-bs-slide-to="0">
+    </div>
+
+    <div class="col-lg-3 col-md-4 col-6">
+      <img src="img/2photo.jpg" class="img-fluid gallery-img-his"
+           data-bs-toggle="modal" data-bs-target="#galleryModal"
+           data-bs-slide-to="1">
+    </div>
+
+    <div class="col-lg-3 col-md-4 col-6">
+      <img src="img/3photo.jpg" class="img-fluid gallery-img-his"
+           data-bs-toggle="modal" data-bs-target="#galleryModal"
+           data-bs-slide-to="2">
+    </div>
+
+    <div class="col-lg-3 col-md-4 col-6">
+      <img src="img/2photo.jpg" class="img-fluid gallery-img-his"
+           data-bs-toggle="modal" data-bs-target="#galleryModal"
+           data-bs-slide-to="3">
+    </div>
+
+  </div>
+</div>
+
+
+<div class="modal fade" id="galleryModal" tabindex="-1">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content bg-black">
+
+      <!-- ✅ MODAL HEADER (FIXED CLOSE BUTTON) -->
+      <div class="modal-header border-0">
+        <button type="button"
+                class="btn-close btn-close-white ms-auto"
+                data-bs-dismiss="modal"
+                aria-label="Close"></button>
+      </div>
+
+      <!-- MODAL BODY -->
+      <div class="modal-body p-0">
+
+        <div id="galleryCarousel" class="carousel slide h-100" data-bs-ride="carousel">
+          <div class="carousel-inner h-100">
+
+            <div class="carousel-item active text-center h-100">
+              <img src="img/1photo.jpg" class="d-block mx-auto h-100">
+            </div>
+
+            <div class="carousel-item text-center h-100">
+              <img src="img/2photo.jpg" class="d-block mx-auto h-100">
+            </div>
+
+            <div class="carousel-item text-center h-100">
+              <img src="img/3photo.jpg" class="d-block mx-auto h-100">
+            </div>
+
+            <div class="carousel-item text-center h-100">
+              <img src="img/2photo.jpg" class="d-block mx-auto h-100">
+            </div>
+
+          </div>
+
+          <!-- Controls -->
+          <button class="carousel-control-prev" type="button"
+                  data-bs-target="#galleryCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+
+          <button class="carousel-control-next" type="button"
+                  data-bs-target="#galleryCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
 
 <section class="donation-section" style="margin-bottom: 10rem;">
@@ -739,6 +842,21 @@ Developed By <a
 
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+const galleryModal = document.getElementById('galleryModal');
+galleryModal.addEventListener('show.bs.modal', function (event) {
+  const thumb = event.relatedTarget;
+  const index = thumb.getAttribute('data-bs-slide-to');
+  const carousel = document.querySelector('#galleryCarousel');
+  const bsCarousel = bootstrap.Carousel.getOrCreateInstance(carousel);
+  bsCarousel.to(index);
+});
+</script>
+
+</body>
+</html>
 
 
 
