title change checkk

--- a/history.html
+++ b/history.html
@@ -312,7 +312,7 @@
 					<div class=" d-flex justify-content-center flex-column" style="background-color: #FAF7ED">
 						<h5 class="col_oran">
 							इतिहास</h5>
-						<h1 class="mt-3 mb-3">श्री श्याम मंदिर सूरत का गौरवशाली इतिहास</h1>
+						<h1 class="mt-3 mb-3">*श्री शक्तिधाम सूरत: इतिहास और गौरव की गाथा*</h1>
 						<p class="mb-0">समर्पण, भक्ति और सेवा के प्रतीक इस मंदिर ने वर्षों से श्रद्धालुओं को आध्यात्मिक ऊर्जा और सांस्कृतिक एकता का संदेश दिया है।</p>
 					</div>
 				</div>
