--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<div class="top_1m text-center">
 								<ul class="mb-0 font_14">
 									<li class="d-inline-block"><a class="text-white a_tag" href="#">
-											श्रद्धा का प्रतीक, सेवा का संकल्प – श्री श्याम धाम सूरत
+											श्री शक्तिधाम सूरत: अटूट आस्था और सेवा का संगम
 
 										</a></li>
 									<!-- <li class="d-inline-block ms-3"><a class="text-white a_tag" href="#"> SERMONS</a></li>
@@ -71,9 +71,14 @@
 			<section id="header">
 				<nav class="navbar navbar-expand-md navbar-light  p-0 bg-theme" id="navbar_sticky">
 					<div class="container-xl">
-						<a class="p-0 navbar-brand fw-bold me-0  " style="color: white;" href="index.html"><i
-								class="fa-solid fa-om me-1 col_oran"></i> Krishna <br>
-							<span class="fw-normal font_14 text-muted">Mega Temple</span>
+						<a class="p-0 navbar-brand fw-bold me-0 " style="color: white; width: 20%;" href="index.html"><img
+    src="/img/logo.jpeg"   // logo path
+    alt="Krishna Mega Temple"
+                  // width in pixels
+    height={40}               // height in pixels
+    className="me-2"  style="width: 20%; margin-right: 10px;"         // spacing between logo and text
+  />श्री रानी सती मंदिर <br>
+							<!-- <span class="fw-normal font_14 text-muted">Mega Temple</span> -->
 						</a>
 						<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 							data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -343,8 +348,8 @@
 							</div>
 
 							<div class="carousel-caption carousel-caption2 d-md-block display-mobile-none">
-								<h1 class="text-white text-uppercase font_50">श्रद्धा का प्रतीक, सेवा का संकल्प – श्री श्याम धाम  </h1>
-								<p class="mt-3 text-light">श्रद्धा, सेवा और समर्पण से सजे श्याम बाबा के पावन धाम का परिचय</p>
+								<h1 class="text-white text-uppercase font_50">श्री शक्तिधाम सूरत: अटूट आस्था और सेवा का संगम  </h1>
+								<p class="mt-3 text-light">संवत 1352 से प्रज्वलित, वीरता और सतीत्व की अमर गाथा।</p>
 								<ul class="mb-0 mt-4">
 									<!-- <li class="d-inline-block"><a class="button_2" href="#">Buy Now <i
 												class="fa fa-arrow-right ms-1"></i></a></li> -->
@@ -359,18 +364,16 @@
 								<img src="img/43photo.png" alt="abc">
 							</div>
 
-							<!-- <div class="carousel-caption carousel-caption3 d-md-block">
-								<h1 class="text-white text-uppercase font_50">Lorem ipsum dolor sit, amet</h1>
-								<p class="mt-3 text-light">Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus?
-									Suscipit class corporis nostra rem quos voluptatibus habitant? Fames, vivamus minim
-									nemo enim, gravida lobortis quasi, eum.</p>
+							<div class="carousel-caption carousel-caption3 d-md-block">
+								<h1 class="text-white text-uppercase font_50">श्री शक्तिधाम सूरत: अटूट आस्था और सेवा का संगम</h1>
+								<p class="mt-3 text-light">संवत 1352 से प्रज्वलित, वीरता और सतीत्व की अमर गाथा।</p>
 								<ul class="mb-0 mt-4">
-									<li class="d-inline-block"><a class="button_2" href="#">Buy Now <i
-												class="fa fa-arrow-right ms-1"></i></a></li>
-									<li class="d-inline-block ms-3"><a class="button_3" href="#">Live Stream <i
+									<!-- <li class="d-inline-block"><a class="button_2" href="#">Buy Now <i
+												class="fa fa-arrow-right ms-1"></i></a></li> -->
+									<li class="d-inline-block ms-3"><a class="button_3" href="#">लाइव दर्शन <i
 												class="fa fa-arrow-right ms-1"></i></a></li>
 								</ul>
-							</div> -->
+							</div>
 						</div>
 					</div>
 					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
